--- a/analytics-agent/pyproject.toml
+++ b/analytics-agent/pyproject.toml
@@ -3,7 +3,7 @@ requires = [ "poetry-core>=1.0.0",]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
-name = "shutter-swapping"
+name = "shutter-analytics"
 version = "0.1.0"
 description = ""
 authors = []
